--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 </head>
 
 <body class="bg-light" id="top">
-  <header class="d-print-none">
+
+  <header>
     <div class="container text-center text-lg-left">
       <div class="pt-4 clearfix">
         <h1 class="site-title mb-0">Kumar Aditya</h1>
@@ -39,29 +40,25 @@
           <nav role="navigation">
             <ul class="nav justify-content-center">
               <li class="nav-item"><a class="nav-link" href="#about" title="About"><span
-                    class="menu-title">About</span></a>
-              </li>
+                    class="menu-title">About</span></a></li>
               <li class="nav-item"><a class="nav-link" href="#skills" title="Skills"><span
-                    class="menu-title">Skills</span></a>
-              </li>
+                    class="menu-title">Skills</span></a></li>
               <li class="nav-item"><a class="nav-link" href="#experience" title="Experience"><span
-                    class="menu-title">Experience</span></a>
-              </li>
+                    class="menu-title">Experience</span></a></li>
               <li class="nav-item"><a class="nav-link" href="#education" title="Education"><span
-                    class="menu-title">Education</span></a>
-              </li>
-              <!-- <li class="nav-item"><a class="nav-link" href="#portfolio" title="Portfolio"><span
-                    class="menu-title">Portfolio</span></a>
-              </li> -->
+                    class="menu-title">Education</span></a></li>
+              <!-- <li class="nav-item"><a class="nav-link" href="#portfolio" title="Portfolio"><span class="menu-title">Portfolio</span></a></li> -->
               <li class="nav-item"><a class="nav-link" href="#contact" title="Contact"><span
-                    class="menu-title">Contact</span></a>
-              </li>
+                    class="menu-title">Contact</span></a></li>
             </ul>
           </nav>
         </div>
       </div>
     </div>
   </header>
+
+
+
 
 
   <div class="page-content">
@@ -73,12 +70,10 @@
             <div class="cover bg-image">
               <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
                 <div class="text-center p-5">
-                  <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="images/avatar.jpg" width="160"
-                      height="160" /></div>
+                  <div class="avatar p-1">
+                  </div>
                   <div class="header-bio mt-3">
-                    <div data-aos="zoom-in" data-aos-delay="0">
-                      <h2 class="h1">Kumar Aditya</h2>
-                      <p>DevOps Systems Engineer</p>
+                    <div data-aos="zoom-in" data-aos-delay="0" id="introName">
                     </div>
                     <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
                       <nav role="navigation">
@@ -167,6 +162,87 @@
       fetch('resume.json')
         .then(response => response.json())
         .then(data => {
+
+
+          // Select the div element with id 'footerAddress'
+          var footerAddressDiv = document.getElementById('footerAddress');
+
+          // Create and populate the card body with the address information
+          var cardBody = document.createElement('div');
+          cardBody.classList.add('card-body');
+          cardBody.style.backgroundColor = '#f8f9fa';
+          cardBody.style.borderLeft = '1px solid #dee2e6';
+
+          // Address
+          var addressTitle = document.createElement('p');
+          addressTitle.classList.add('mb-0');
+          addressTitle.innerHTML = '<strong>Address</strong>';
+          cardBody.appendChild(addressTitle);
+
+          var addressText = document.createElement('p');
+          addressText.classList.add('pb-2');
+          addressText.textContent = data.footerAddress.Address;
+          cardBody.appendChild(addressText);
+
+          // Phone
+          var phoneTitle = document.createElement('p');
+          phoneTitle.classList.add('mb-0');
+          phoneTitle.innerHTML = '<strong>Phone</strong>';
+          cardBody.appendChild(phoneTitle);
+
+          var phoneText = document.createElement('p');
+          phoneText.classList.add('pb-2');
+          phoneText.textContent = data.footerAddress.Phone;
+          cardBody.appendChild(phoneText);
+
+          // Email
+          var emailTitle = document.createElement('p');
+          emailTitle.classList.add('mb-0');
+          emailTitle.innerHTML = '<strong>Email</strong>';
+          cardBody.appendChild(emailTitle);
+
+          var emailText = document.createElement('p');
+          emailText.textContent = data.footerAddress.Email;
+          cardBody.appendChild(emailText);
+
+          // Append the card body to the footerAddressDiv
+          footerAddressDiv.appendChild(cardBody);
+
+          //////////////////////////////////////////
+
+          // Select the div element with class 'avatar'
+          var avatarDiv = document.querySelector('.avatar');
+
+          // Create an img element
+          var imgElement = document.createElement('img');
+
+          var imageUrl = data.imageAvatar;
+
+          // Set attributes for the img element
+          imgElement.setAttribute('src', imageUrl);
+          imgElement.setAttribute('width', '160');
+          imgElement.setAttribute('height', '160');
+          imgElement.classList.add('img-thumbnail', 'shadow-2-strong');
+          imgElement.setAttribute('id', 'avatarImage'); // Assigning id 'avatarImage' to the img element
+
+          // Append the img element to the avatar div
+          avatarDiv.appendChild(imgElement);
+
+          ////////////////////////////
+
+          // Select the div element with id 'introName'
+          var introDiv = document.getElementById('introName');
+
+          // Create and set the h2 element
+          var h2Element = document.createElement('h2');
+          h2Element.textContent = data.intro.name;
+          introDiv.appendChild(h2Element);
+
+          // Create and set the p element
+          var pElement = document.createElement('p');
+          pElement.textContent = data.intro.role;
+          introDiv.appendChild(pElement);
+
           // Populate About Me Section
           document.getElementById('aboutMeContent').textContent = data.aboutMe;
 
@@ -229,6 +305,68 @@
                     </div>`;
           });
           document.getElementById('educationContent').innerHTML = educationContent;
+
+          ///////////////////////////////////
+
+          // Select the div element with id 'footerNavLink'
+          var footerNavLinkDiv = document.getElementById('footerNavLink');
+
+          // Create navigation structure
+          var navElement = document.createElement('nav');
+          navElement.setAttribute('role', 'navigation');
+
+          var ulElement = document.createElement('ul');
+          ulElement.classList.add('nav', 'justify-content-center');
+
+          // Create Twitter link
+          var twitterLi = document.createElement('li');
+          twitterLi.classList.add('nav-item');
+          var twitterLink = document.createElement('a');
+          twitterLink.classList.add('nav-link');
+          twitterLink.setAttribute('href', data.footerNavLink.twitter);
+          twitterLink.setAttribute('title', 'Twitter');
+          twitterLink.innerHTML = '<i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span>';
+          twitterLi.appendChild(twitterLink);
+          ulElement.appendChild(twitterLi);
+
+          // Create Facebook link
+          var facebookLi = document.createElement('li');
+          facebookLi.classList.add('nav-item');
+          var facebookLink = document.createElement('a');
+          facebookLink.classList.add('nav-link');
+          facebookLink.setAttribute('href', data.footerNavLink.facebook);
+          facebookLink.setAttribute('title', 'Facebook');
+          facebookLink.innerHTML = '<i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span>';
+          facebookLi.appendChild(facebookLink);
+          ulElement.appendChild(facebookLi);
+
+          // Create Instagram link
+          var instagramLi = document.createElement('li');
+          instagramLi.classList.add('nav-item');
+          var instagramLink = document.createElement('a');
+          instagramLink.classList.add('nav-link');
+          instagramLink.setAttribute('href', data.footerNavLink.instagram);
+          instagramLink.setAttribute('title', 'Instagram');
+          instagramLink.innerHTML = '<i class="fab fa-linkedin"></i><span class="menu-title sr-only">Instagram</span>';
+          instagramLi.appendChild(instagramLink);
+          ulElement.appendChild(instagramLi);
+
+          // Create Github link
+          var githubLi = document.createElement('li');
+          githubLi.classList.add('nav-item');
+          var githubLink = document.createElement('a');
+          githubLink.classList.add('nav-link');
+          githubLink.setAttribute('href', data.footerNavLink.github);
+          githubLink.setAttribute('title', 'Github');
+          githubLink.innerHTML = '<i class="fab fa-github"></i><span class="menu-title sr-only">Github</span>';
+          githubLi.appendChild(githubLink);
+          ulElement.appendChild(githubLi);
+
+          // Append navigation structure to footerNavLinkDiv
+          navElement.appendChild(ulElement);
+          footerNavLinkDiv.appendChild(navElement);
+
+
         })
         .catch(error => console.error('Error fetching data:', error));
     });
@@ -303,14 +441,14 @@
                       <div id="responseMessage" class="mt-3"></div>
                     </div>
                   </div>
-                  <div class="col-md-6" style="padding: 10px; margin-top: 10px;">
+                  <div class="col-md-6" style="padding: 10px; margin-top: 10px;" id="footerAddress">
                     <div class="card-body" style="background-color: #f8f9fa; border-left: 1px solid #dee2e6;">
-                      <p class="mb-0"><strong>Address</strong></p>
+                      <!-- <p class="mb-0"><strong>Address</strong></p>
                       <p class="pb-2">528-30 Tretti Way, North York, Ontario M3H 0E3</p>
                       <p class="mb-0"><strong>Phone</strong></p>
                       <p class="pb-2">+1 437 602 9840</p>
                       <p class="mb-0"><strong>Email</strong></p>
-                      <p>official.srv.modak@gmail.com</p>
+                      <p>official.srv.modak@gmail.com</p> -->
                     </div>
                   </div>
                 </div>
@@ -368,8 +506,8 @@
     <div class="container">
       <div class="my-3">
         <div class="h4">Kumar Aditya</div>
-        <div class="footer-nav">
-          <nav role="navigation">
+        <div class="footer-nav" id="footerNavLink">
+          <!-- <nav role="navigation">
             <ul class="nav justify-content-center">
               <li class="nav-item"><a class="nav-link" href="https://twitter.com" title="Twitter"><i
                     class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
@@ -380,7 +518,7 @@
               <li class="nav-item"><a class="nav-link" href="https://github.com/adityasharma1011" title="Github"><i
                     class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a></li>
             </ul>
-          </nav>
+          </nav> -->
         </div>
       </div>
       <div class="text-small">
