--- a/index.html
+++ b/index.html
@@ -33,31 +33,43 @@
 <body class="bg-light" id="top">
 
   <header>
-    <div class="container text-center text-lg-left">
-      <div class="pt-4 clearfix">
-        <h1 class="site-title mb-0">Kumar Aditya</h1>
-        <div class="site-nav">
-          <nav role="navigation">
-            <ul class="nav justify-content-center">
-              <li class="nav-item"><a class="nav-link" href="#about" title="About"><span
-                    class="menu-title">About</span></a></li>
-              <li class="nav-item"><a class="nav-link" href="#skills" title="Skills"><span
-                    class="menu-title">Skills</span></a></li>
-              <li class="nav-item"><a class="nav-link" href="#experience" title="Experience"><span
-                    class="menu-title">Experience</span></a></li>
-              <li class="nav-item"><a class="nav-link" href="#education" title="Education"><span
-                    class="menu-title">Education</span></a></li>
-              <!-- <li class="nav-item"><a class="nav-link" href="#portfolio" title="Portfolio"><span class="menu-title">Portfolio</span></a></li> -->
-              <li class="nav-item"><a class="nav-link" href="#contact" title="Contact"><span
-                    class="menu-title">Contact</span></a></li>
+    <div class="profile-page sidebar-collapse">
+      <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" style="background-color: white;"
+        color-on-scroll="400">
+        <div class="container">
+          <a class="navbar-brand" href="#" rel="tooltip">Kumar Aditya</a>
+
+          <!-- Navbar Toggler Button -->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+            aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- No need for additional icon span -->
+          </button>
+
+          <!-- Navbar Links -->
+          <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link" href="#about" title="About" onclick="closeNavbar()">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="#skills" title="Skills" onclick="closeNavbar()">Skills</a></li>
+              <li class="nav-item"><a class="nav-link" href="#experience" title="Experience" onclick="closeNavbar()">Experience</a></li>
+              <li class="nav-item"><a class="nav-link" href="#education" title="Education" onclick="closeNavbar()">Education</a></li>
+              <li class="nav-item"><a class="nav-link" href="#contact" title="Contact" onclick="closeNavbar()">Contact</a></li>
             </ul>
-          </nav>
+          </div>
         </div>
-      </div>
+      </nav>
     </div>
   </header>
 
+  <!-- Bootstrap JS and jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 
+  <script>
+    // Function to close the navbar when a link is clicked
+    function closeNavbar() {
+      $('.navbar-collapse').collapse('hide');
+    }
+  </script>
 
 
 
@@ -65,7 +77,7 @@
     <div class="container">
       <div class="resume-container">
         <!-- Intro Section -->
-        <div class="shadow-1-strong bg-white my-2" id="intro">
+        <div class="shadow-1-strong bg-white my-5" id="intro">
           <div class="bg-info text-white">
             <div class="cover bg-image">
               <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
