--- a/index.html
+++ b/index.html
@@ -33,27 +33,30 @@
 <body class="bg-light" id="top">
 
   <header>
-    <div class="container text-center text-lg-left">
-      <div class="pt-4 clearfix">
-        <h1 class="site-title mb-0">Kumar Aditya</h1>
-        <div class="site-nav">
-          <nav role="navigation">
-            <ul class="nav justify-content-center">
-              <li class="nav-item"><a class="nav-link" href="#about" title="About"><span
-                    class="menu-title">About</span></a></li>
-              <li class="nav-item"><a class="nav-link" href="#skills" title="Skills"><span
-                    class="menu-title">Skills</span></a></li>
-              <li class="nav-item"><a class="nav-link" href="#experience" title="Experience"><span
-                    class="menu-title">Experience</span></a></li>
-              <li class="nav-item"><a class="nav-link" href="#education" title="Education"><span
-                    class="menu-title">Education</span></a></li>
-              <!-- <li class="nav-item"><a class="nav-link" href="#portfolio" title="Portfolio"><span class="menu-title">Portfolio</span></a></li> -->
-              <li class="nav-item"><a class="nav-link" href="#contact" title="Contact"><span
-                    class="menu-title">Contact</span></a></li>
+    <div class="profile-page sidebar-collapse">
+      <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" style="background-color: white;"
+        color-on-scroll="400">
+        <div class="container">
+          <div class="navbar-translate">
+            <a class="navbar-brand" href="#" rel="tooltip" style="color: black;">Kumar Aditya</a>
+            <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse"
+              data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-bar bar1"></span>
+              <span class="navbar-toggler-bar bar2"></span>
+              <span class="navbar-toggler-bar bar3"></span>
+            </button>
+          </div>
+          <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link" href="#about" title="About"><span class="menu-title">About</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="#skills" title="Skills"><span class="menu-title">Skills</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="#experience" title="Experience"><span class="menu-title">Experience</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="#education" title="Education"><span class="menu-title">Education</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="#contact" title="Contact"><span class="menu-title">Contact</span></a></li>
             </ul>
-          </nav>
+          </div>
         </div>
-      </div>
+      </nav>
     </div>
   </header>
 
@@ -65,7 +68,7 @@
     <div class="container">
       <div class="resume-container">
         <!-- Intro Section -->
-        <div class="shadow-1-strong bg-white my-2" id="intro">
+        <div class="shadow-1-strong bg-white my-5" id="intro">
           <div class="bg-info text-white">
             <div class="cover bg-image">
               <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
