adjusted the cards background.

--- a/index.html
+++ b/index.html
@@ -182,8 +182,6 @@
           // Create and populate the card body with the address information
           var cardBody = document.createElement('div');
           cardBody.classList.add('card-body');
-          cardBody.style.backgroundColor = '#f8f9fa';
-          cardBody.style.borderLeft = '1px solid #dee2e6';
 
           // Address
           var addressTitle = document.createElement('p');
@@ -454,7 +452,7 @@
                     </div>
                   </div>
                   <div class="col-md-6" style="padding: 10px; margin-top: 10px;" id="footerAddress">
-                    <div class="card-body" style="background-color: #f8f9fa; border-left: 1px solid #dee2e6;">
+                    <div class="card-body">
                       <!-- <p class="mb-0"><strong>Address</strong></p>
                       <p class="pb-2">528-30 Tretti Way, North York, Ontario M3H 0E3</p>
                       <p class="mb-0"><strong>Phone</strong></p>
