--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         <div class="cc-contact">
           <div class="row justify-content-center">
             <div class="col-md-10">
-              <div class="card mb-0" data-aos="zoom-in" style="box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+              <div class="card mb-0 shadow-1-strong bg-white" data-aos="zoom-in" style="box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
                 <div class="h4 text-center title bg-info text-white shadow-sm" style="padding: 20px 0;">Contact Me
                 </div>
                 <div class="row no-gutters">
