--- a/index.html
+++ b/index.html
@@ -70,17 +70,15 @@
         <!-- Intro Section -->
         <div class="shadow-1-strong bg-white my-2" id="intro">
           <div class="bg-info text-white">
-            <div class="cover bg-image">
+            <div class="cover bg-image"><img src="images/header-background.jpg" />
               <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
                 <div class="text-center p-5">
                   <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="images/avatar.jpg" width="160"
                       height="160" /></div>
                   <div class="header-bio mt-3">
-                    <div data-aos="zoom-in" data-aos-delay="0">
-                      <h2 class="h1">Kumar Aditya</h2>
-                      <p>DevOps Systems Engineer</p>
-                    </div>
-                    <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
+                    <h2 class="h1">Kumar Aditya</h2>
+                    <p>DevOps Systems Engineer</p>
+                    <div class="header-social mb-3 d-print-none">
                       <nav role="navigation">
                         <ul class="nav justify-content-center">
                           <li class="nav-item"><a class="nav-link" href="https://twitter.com" title="Twitter"><i
@@ -100,8 +98,8 @@
                         </ul>
                       </nav>
                     </div>
-                    <div class="d-print-none"><a class="btn btn-outline-light btn-lg shadow-sm mt-1 me-3"
-                        href="material-resume.pdf">Download CV</a><a class="btn btn-info btn-lg shadow-sm mt-1"
+                    <div class="d-print-none"><a class="btn btn-outline-light btn-lg bg-black shadow-sm mt-1 me-3"
+                        href="material-resume.pdf">Download CV</a><a class="btn btn-info btn-lg bg-black shadow-sm mt-1"
                         href="#contact">Hire
                         Me</a></div>
                   </div>
@@ -117,12 +115,51 @@
             <div class="row">
               <div class="col-md-6">
                 <h2 class="h2 fw-light mb-4">About Me</h2>
-                <p id="aboutMeContent"></p>
+                <p>Hello! I’m Walter Patterson. I am passionate about UI/UX design and Web Design. I am a skilled
+                  <strong>front-end developer</strong> and master of graphic design tools such as Photoshop and Sketch.
+                  I am a quick learner and a team worker that gets the job done.
+                </p>
+                <p>I can easily capitalize on low hanging fruits and quickly maximize timely deliverables for real-time
+                  schemas.</p>
               </div>
               <div class="col-md-5 offset-lg-1">
                 <div class="row mt-2">
                   <h2 class="h2 fw-light mb-4">Bio</h2>
-                  <div id="bioContent"></div>
+                  <div class="col-sm-5">
+                    <div class="pb-2 fw-bolder"><i class="fa fa-history pe-2 text-muted"
+                        style="width:24px;opacity:0.85;"></i> Work Experience</div>
+                  </div>
+                  <div class="col-sm-7">
+                    <div class="pb-2">11 years</div>
+                  </div>
+                  <div class="col-sm-5">
+                    <div class="pb-2 fw-bolder"><i class="far fa-envelope pe-2 text-muted"
+                        style="width:24px;opacity:0.85;"></i> Email</div>
+                  </div>
+                  <div class="col-sm-7">
+                    <div class="pb-2">walter@company.com</div>
+                  </div>
+                  <div class="col-sm-5">
+                    <div class="pb-2 fw-bolder"><i class="fab fa-slack pe-2 text-muted"
+                        style="width:24px;opacity:0.85;"></i> Slack </div>
+                  </div>
+                  <div class="col-sm-7">
+                    <div class="pb-2">username@skype.com</div>
+                  </div>
+                  <div class="col-sm-5">
+                    <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted"
+                        style="width:24px;opacity:0.85;"></i> Phone</div>
+                  </div>
+                  <div class="col-sm-7">
+                    <div class="pb-2">+0718-111-0011</div>
+                  </div>
+                  <div class="col-sm-5">
+                    <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted"
+                        style="width:24px;opacity:0.85;"></i> Address</div>
+                  </div>
+                  <div class="col-sm-7">
+                    <div class="pb-2">Ontario, Canada</div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -133,23 +170,116 @@
         <div class="shadow-1-strong bg-white my-5 p-5" id="skills">
           <div class="skills-section">
             <h2 class="h2 fw-light mb-4">Professional Skills</h2>
-            <div id="skillsContent"></div>
+            <div class="row">
+              <table class="skills-table">
+                <tr>
+                  <td><b>Platforms</b></td>
+                  <td>
+                    <ul>
+                      <li>Linux (RHEL 7/8, CentOS 7/8, Ubuntu), Windows Server/Client OS</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td><b>Source Control</b></td>
+                  <td>
+                    <ul>
+                      <li>Git, Bitbucket, Gitlab, GitHub</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td><b>Build Tools</b></td>
+                  <td>
+                    <ul>
+                      <li>Ant, Maven</li>
+                    </ul>
+                  </td>
+                </tr>
+              </table>
+            </div>
           </div>
         </div>
 
-        <!-- Work Experience Section -->
+
+
+
         <div class="shadow-1-strong bg-white my-5 p-5" id="experience">
           <div class="work-experience-section">
             <h2 class="h2 fw-light mb-4">Work Experience</h2>
-            <div id="experienceContent"></div>
+            <div class="timeline">
+              <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">Frontend Developer <span class="text-muted h6">at Creative Agency</span></div>
+                </div>
+                <div class="timeline-body px-4 pb-4">
+                  <div class="text-muted text-small mb-3">May, 2015 - Present</div>
+                  <div>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative
+                    approaches to corporate strategy foster collaborative thinking to further the overall value
+                    proposition.</div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="200">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">Graphic Designer <span class="text-muted h6">at Design Studio</span></div>
+                </div>
+                <div class="timeline-body px-4 pb-4">
+                  <div class="text-muted text-small mb-3">June, 2013 - May, 2015</div>
+                  <div>Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion
+                    along the information highway will close the loop on focusing solely on the bottom line.</div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="400">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">Junior Web Developer <span class="text-muted h6">at Indie Studio</span></div>
+                </div>
+                <div class="timeline-body px-4 pb-4">
+                  <div class="text-muted text-small mb-3">Jan, 2011 - May, 2013</div>
+                  <div>User generated content in real-time will have multiple touchpoints for offshoring. Organically
+                    grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-
-        <!-- Education Section -->
         <div class="shadow-1-strong bg-white my-5 p-5" id="education">
           <div class="education-section">
             <h2 class="h2 fw-light mb-4">Education</h2>
-            <div id="educationContent"></div>
+            <div class="timeline">
+              <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="0">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">Masters in Information Technology <span class="text-muted h6">from International
+                      University</span> </div>
+                </div>
+                <div class="timeline-body px-4 pb-4">
+                  <div class="text-muted text-small mb-3">2011 - 2013</div>
+                  <div>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative
+                    approaches to corporate strategy foster collaborative thinking to further the overall value
+                    proposition.</div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="200">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">Bachelor of Computer Science <span class="text-muted h6">from Regional College</span>
+                  </div>
+                </div>
+                <div class="timeline-body px-4 pb-4">
+                  <div class="text-muted text-small mb-3">2007 - 2011</div>
+                  <div>Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion
+                    along the information highway will close the loop on focusing solely on the bottom line.</div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="400">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">Science and Mathematics <span class="text-muted h6">from Mt. High Scool</span> </div>
+                </div>
+                <div class="timeline-body px-4 pb-4">
+                  <div class="text-muted text-small mb-3">1995 - 2007</div>
+                  <div>User generated content in real-time will have multiple touchpoints for offshoring. Organically
+                    grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -161,78 +291,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <!-- Font Awesome Script -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
-  <!-- Custom JavaScript -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      fetch('resume.json')
-        .then(response => response.json())
-        .then(data => {
-          // Populate About Me Section
-          document.getElementById('aboutMeContent').textContent = data.aboutMe;
-
-          // Populate Bio Section
-          let bioContent = '';
-          Object.keys(data.bio).forEach(key => {
-            bioContent += `<div class="row">
-                        <div class="col-sm-5">
-                            <div class="pb-2 fw-bolder">${key}</div>
-                        </div>
-                        <div class="col-sm-7">
-                            <div class="pb-2">${data.bio[key]}</div>
-                        </div>
-                    </div>`;
-          });
-          document.getElementById('bioContent').innerHTML = bioContent;
-
-          // Populate Professional Skills Section
-          let skillsContent = '';
-          Object.keys(data.professionalSkills).forEach(key => {
-            skillsContent += `<div class="row">
-                        <div class="col-sm-5">
-                            <div class="pb-2 fw-bolder">${key}</div>
-                        </div>
-                        <div class="col-sm-7">
-                            <ul>`;
-            data.professionalSkills[key].forEach(skill => {
-              skillsContent += `<li>${skill}</li>`;
-            });
-            skillsContent += `</ul></div></div>`;
-          });
-          document.getElementById('skillsContent').innerHTML = skillsContent;
-
-          // Populate Work Experience Section
-          let experienceContent = '';
-          data.workExperience.forEach(job => {
-            experienceContent += `<div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
-                        <div class="timeline-head px-4 pt-3">
-                            <div class="h5">${job.title} <span class="text-muted h6">at ${job.company}</span></div>
-                        </div>
-                        <div class="timeline-body px-4 pb-4">
-                            <div class="text-muted text-small mb-3">${job.date}</div>
-                            <div>${job.description}</div>
-                        </div>
-                    </div>`;
-          });
-          document.getElementById('experienceContent').innerHTML = experienceContent;
-
-          // Populate Education Section
-          let educationContent = '';
-          data.education.forEach(edu => {
-            educationContent += `<div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="0">
-                        <div class="timeline-head px-4 pt-3">
-                            <div class="h5">${edu.degree} <span class="text-muted h6">from ${edu.university || edu.school}</span></div>
-                        </div>
-                        <div class="timeline-body px-4 pb-4">
-                            <div class="text-muted text-small mb-3">${edu.date}</div>
-                            <div>${edu.description}</div>
-                        </div>
-                    </div>`;
-          });
-          document.getElementById('educationContent').innerHTML = educationContent;
-        })
-        .catch(error => console.error('Error fetching data:', error));
-    });
-  </script>
 
 
   <div class="section" id="contact">
@@ -242,14 +300,14 @@
         <div class="cc-contact">
           <div class="row justify-content-center">
             <div class="col-md-10">
-              <div class="card mb-0" data-aos="zoom-in" style="box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
-                <div class="h4 text-center title bg-info text-white shadow-sm" style="padding: 20px 0;">Contact Me
+              <div class="card mb-0 shadow-1-strong bg-white" data-aos="zoom-in"
+                style="box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                <div class="h4 text-center title bg-black text-white shadow-sm" style="padding: 20px 0;">Contact Me
                 </div>
                 <div class="row no-gutters">
                   <div class="col-md-6" style="padding: 10px;">
                     <div class="card-body">
                       <form id="contactForm">
-                        <div class="p pb-3"><strong>Feel free to contact me</strong></div>
                         <div class="row mb-3">
                           <div class="col">
                             <div class="input-group">
@@ -296,15 +354,15 @@
                         </div>
                         <div class="row">
                           <div class="col text-center">
-                            <button class="btn btn-info btn-lg shadow-sm mt-1" type="submit">Send</button>
+                            <button class="btn btn-info btn-lg bg-black shadow-sm mt-1" type="submit">Send</button>
                           </div>
                         </div>
                       </form>
                       <div id="responseMessage" class="mt-3"></div>
                     </div>
                   </div>
-                  <div class="col-md-6" style="padding: 10px; margin-top: 10px;">
-                    <div class="card-body" style="background-color: #f8f9fa; border-left: 1px solid #dee2e6;">
+                  <div class="col-md-6" style="margin-top: 10px;">
+                    <div class="card-body">
                       <p class="mb-0"><strong>Address</strong></p>
                       <p class="pb-2">528-30 Tretti Way, North York, Ontario M3H 0E3</p>
                       <p class="mb-0"><strong>Phone</strong></p>
@@ -321,6 +379,7 @@
       </div>
     </div>
   </div>
+
 
   <script>
     const contactForm = document.getElementById('contactForm');
