few more changes

--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
                         </ul>
                       </nav>
                     </div>
-                    <div class="d-print-none"><a class="btn btn-outline-light btn-lg bg-black shadow-sm mt-1 me-3"
-                        href="material-resume.pdf">Download CV</a><a class="btn btn-info btn-lg bg-black shadow-sm mt-1"
-                        href="#contact">Hire
+                    <div class="d-print-none"><a
+                        class="btn btn-outline-light btn-info btn-lg bg-black shadow-sm mt-1 me-3"
+                        href="material-resume.pdf">Download CV</a><a
+                        class="btn btn-outline-light btn-info btn-lg bg-black shadow-sm mt-1" href="#contact">Hire
                         Me</a></div>
                   </div>
                 </div>
@@ -294,6 +295,51 @@
             </div>
           </div>
         </div>
+
+        <!-- Portfolio Skills Section -->
+        <div class="shadow-1-strong bg-white my-5 p-5" id="skills">
+          <div class="skills-section">
+            <h2 class="h2 fw-light mb-4">Portfolio</h2>
+            <div class="row">
+              <table class="skills-table">
+                <tr>
+                  <td><b>Project 1</b></td>
+                  <td>
+                    <ul>
+                      <li>Linux (RHEL 7/8, CentOS 7/8, Ubuntu), Windows Server/Client OS</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td><b>Project 2</b></td>
+                  <td>
+                      Git, Bitbucket, Gitlab, GitHub Git, Bitbucket, Gitlab, GitHub
+                      Git, Bitbucket, Gitlab, GitHub
+                      Git, Bitbucket, Gitlab, GitHub
+                      Git, Bitbucket, Gitlab, GitHub
+                      Git, Bitbucket, Gitlab, GitHub
+                      Git, Bitbucket, Gitlab, GitHub
+                      Git, Bitbucket, Gitlab, GitHub
+                    <br>
+                    <a href="http://www.google.com">click here to check the demo</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td><b>Build Tools</b></td>
+                  <td>
+                    <ul>
+                      <li>Ant, Maven</li>
+                    </ul>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+
+
+
+
       </div>
     </div>
   </div>
